@@ -5,42 +5,42 @@ import view.GameFrameView;
 
 import javax.swing.*;
 import java.awt.*;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 
 import static java.awt.Cursor.DEFAULT_CURSOR;
 import static java.lang.Math.abs;
 import static view.GameFrameView.STATUS;
 
-public class Board {
-
-    public static ArrayList<BoardRows> boardRows;
-
-    private GameFrameView gfv;
+public class GameEngineFacade implements GameEngine{
 
     public static final int BOARD_ROWS = 13; // increments in 5
     public static final int BOARD_COLS = 15; // increments in 4
-
+    private GameFrameView gfv;
     private Piece summonedPiece;
+    private Tile[][] tiles;
 
     // Initialize current turn;
+
+
     private int turn;
+
     private int[] turns;
     private int[] coordinate;
     private int[] initTileCoord;
     private boolean isMoving;
     private boolean isAttacking;
-    private boolean hasSummoned;
-    private boolean hasMoved;
-    private boolean hasAttacked;
-    private boolean canDoAction = true;
+    private boolean actionPerformed;
 
-    public Board(GameFrameView gfv) {
+    public GameEngineFacade(GameFrameView gfv) {
         this.gfv = gfv;
 
-        Board.boardRows = new ArrayList<>(BOARD_ROWS);
+        tiles = new Tile[BOARD_ROWS][BOARD_COLS];
 
         for (int i = 0; i < BOARD_ROWS; i++) {
-            boardRows.add(new BoardRows());
+            for (int j = 0; j < BOARD_COLS; j++) {
+                tiles[i][j] = new Tile(i, j);
+            }
         }
 
         initTileCoord = new int[2];
@@ -51,7 +51,7 @@ public class Board {
         // Initialize current turn;
         turn = 0;
 
-        hasMoved = false;
+        actionPerformed = false;
     }
 
     public boolean isMoving() {
@@ -62,17 +62,15 @@ public class Board {
         return isAttacking;
     }
 
-    // Click button to reset attacking
+    //resets the attacking mode and resets the colour of the tiles + cursor
     public void resetAttacking() {
         isAttacking = false;
-        gfv.getFrame().setCursor(new Cursor(DEFAULT_CURSOR));
-        if(canDoAction) {
-            gfv.getStatusLabel().setText(STATUS + "You can either summon, move your valid piece or attack valid opposite piece in this turn.");
-        }
         gfv.decolour();
+        gfv.getFrame().setCursor(new Cursor(Cursor.DEFAULT_CURSOR));
         depaintAction();
     }
 
+    //set the mode for attacking
     public void setAttacking() {
         if (isFactionMatched(coordinate[0], coordinate[1])) {
             isAttacking = true;
@@ -80,36 +78,30 @@ public class Board {
             Image icon = new ImageIcon(this.getClass().getResource("../../images/target.png")).getImage();
             gfv.getFrame().setCursor(Toolkit.getDefaultToolkit().createCustomCursor(icon, new Point(0, 0), "name"));
 
-            int range = getPiece(coordinate[0], coordinate[1]).getRange();
+            int range = getPiece(coordinate[0], coordinate[1]).getAttackRange();
             int row = coordinate[0];
             int col = coordinate[1];
 
-            paintActionRange(row, col, range, "attack");
+            // paintAttack(); to make diff colour for attack range
+            paintMovAttackRange(row, col, "attackRange");
+
         }
 
-        // Attempt to make opposite player's piece to attack
+        // Attempt to move opposite player's piece
         else {
-                gfv.getStatusLabel().setText(GameFrameView.STATUS + "You cannot make your opponent's pieces to attack.");
+            gfv.getStatusLabel().setText(STATUS + "You cannot move your opponent's pieces.");
         }
     }
 
-    // Click button to reset moving and summon
+    //reset the moving mode, and resets the colour of the tiles + cursor
     public void resetMoving() {
         isMoving = false;
-        gfv.getFrame().setCursor(new Cursor(DEFAULT_CURSOR));
-
-        if(canDoAction) {
-            gfv.getStatusLabel().setText(STATUS + "You can either summon, move your valid piece or attack valid opposite piece in this turn.");
-        }
-
-        else if (hasSummoned) {
-            gfv.getStatusLabel().setText(GameFrameView.STATUS + "You cannot summon another piece in this turn.");
-        }
-
         gfv.decolour();
         depaintAction();
+        gfv.getFrame().setCursor(new Cursor(Cursor.DEFAULT_CURSOR));
     }
 
+    //enter the moving mode
     public void setMoving() {
         if (isFactionMatched(coordinate[0], coordinate[1])) {
             isMoving = true;
@@ -117,96 +109,79 @@ public class Board {
             Image icon = new ImageIcon(this.getClass().getResource("../" + gfv.getImage())).getImage();
             gfv.getFrame().setCursor(Toolkit.getDefaultToolkit().createCustomCursor(icon, new Point(0, 0), "name"));
 
-            int mov = getPiece(coordinate[0], coordinate[1]).getMov();
+            int mov = getPiece(coordinate[0], coordinate[1]).getMoveSpeed();
             int row = coordinate[0];
             int col = coordinate[1];
-            paintActionRange(row, col, mov, "move");
+            paintMovAttackRange(row, col, "moveSpeed");
         }
 
         // Attempt to move opposite player's piece
         else {
-            gfv.getStatusLabel().setText(GameFrameView.STATUS + "You cannot move your opponent's pieces.");
+            gfv.getStatusLabel().setText(STATUS + "You cannot move your opponent's pieces.");
         }
     }
 
-    private void paintActionRange(int row, int col, int radius, String isActing) {
-
+    // want to change colour for showing movement and attack range on tiles
+    private void paintMovAttackRange(int row, int col, String actionType) {
+        Piece piece = getPiece(coordinate[0], coordinate[1]);
+        int radius = piece.getActionRange(actionType);
         for (int i = -radius; i <= radius; i++) {
             for (int j = -radius; j <= radius; j++) {
-                if (checkMoveRepaint(row + i, col + j) && abs(i) + abs(j) <= radius) {
-                    gfv.colourTile(row + i, col + j, isActing);
+                if (checkMoveRepaint(row + i, col + j) &&
+                        piece.isActionValid(abs(row - abs(row + i)), abs(col - abs(col + j)), actionType)) {
+                    gfv.colourTile(row + i, col + j, actionType);
                 }
             }
         }
     }
 
+    //resets the colour of the tiles back
     private void depaintAction() {
         JButton[][] tileBtns = gfv.getTileBtns();
         for (int i = 0; i < BOARD_ROWS; i++) {
             for (int j = 0; j < BOARD_COLS; j++) {
-                if (!isWall(i, j) && !getTile(i, j).hasPiece()) {
+                if (!isWall(i, j) && !getTile(i, j).hasPiece() && !isCastle(i)) {
                     tileBtns[i][j].setIcon(new ImageIcon(this.getClass().getResource("../../images/grass.png")));
                 }
             }
         }
     }
 
+    // check if a certain tile should be repainted with the paintMovAttack
     private boolean checkMoveRepaint(int i, int j) {
         try {
-            return !isWall(i, j) && !getTile(i, j).hasPiece();
+            return !isWall(i, j) && !getTile(i, j).hasPiece() && !isCastle(i);
         } catch (RuntimeException e) {
             return true;
         }
     }
 
-    public boolean hasMoved() {
-        return hasMoved;
+    public boolean getActionPerformed() {
+        return actionPerformed;
     }
 
-    public boolean hasAttacked() {
-        return hasAttacked;
-    }
-
-    public boolean hasSummoned() {
-        return hasSummoned;
-    }
-
-    private void setMoved() {
-        this.hasMoved = true;
-        canDoAction = false;
+    //sets the variable that tells the game if a player has performed an action on his turn.
+    private void setActionPerformed() {
+        actionPerformed = true;
         gfv.colourEndTurn();
     }
 
-    private void setAttcked() {
-        this.hasAttacked = true;
-        canDoAction = false;
-        gfv.colourEndTurn();
-    }
-
-    private void setSummoned() {
-        this.hasSummoned = true;
-        canDoAction = false;
-        gfv.colourEndTurn();
-    }
-
-    public boolean canDoAction() {
-        return canDoAction;
-    }
-
-    public void resetAction() {
-        hasMoved = false;
-        hasSummoned = false;
-        hasAttacked = false;
-        canDoAction = true;
+    //called when the end turn button is clicked and changes the turn, including repainting the GUI
+    //with appropriate player and game info
+    public void unsetActionPerformed() {
+        actionPerformed = false;
         gfv.decolourEndTurn();
         gfv.decolour();
         cycleTurn();
         gfv.updateBar(turn);
         gfv.getFrame().setCursor(new Cursor(Cursor.DEFAULT_CURSOR));
-        gfv.getStatusLabel().setText(GameFrameView.STATUS + "");
+        gfv.getMoveBtn().setVisible(true);
+        gfv.getAttackBtn().setVisible(true);
+        gfv.getStatusLabel().setText(STATUS + "");
         depaintAction();
         resetAttacking();
         resetMoving();
+        reset();
     }
 
     public int[] getCoordinates() {
@@ -218,34 +193,22 @@ public class Board {
         coordinate[1] = j;
         System.out.println("TileButton Name: " + tileBtn.getName());
         boolean match = isFactionMatched(i, j);
-
-        // can move or attack ideally
-        if (match && canDoAction) {
+        if (match && !actionPerformed) {
             gfv.setImage(tileBtn.getName());
             gfv.colourTile(tileBtn);
-
-            // check if moveable
             if (checkMoveInit(i, j)) {
                 gfv.colourMove();
             } else {
                 gfv.colourRedMove();
             }
-
-            // check if attackable
             if (checkAttackInit(i, j)) {
                 gfv.colourAttack();
             } else {
                 gfv.colourRedAttack();
             }
-        }
-
-        // cannot do actions in this turn
-        else if(!canDoAction){
+        } else if (actionPerformed) {
             gfv.decolour();
-        }
-
-        // click on opposite team's pieces
-        else {
+        } else {
             gfv.colourRed(tileBtn);
         }
     }
@@ -255,10 +218,19 @@ public class Board {
         coordinate = new int[2];
     }
 
+    //resets the saved coordinate of a tile and the summoned piece which are saved in the board
+    private void reset() {
+        resetCoordinates();
+        initTileCoord = null;
+        initTileCoord = new int[2];
+        removeSummonedPiece();
+    }
+
     public boolean hasCoordinates() {
         return coordinate != null;
     }
 
+    // Check if the player and the piece on action is in the same team
     private boolean isFactionMatched(int i, int j) {
         return turn == 0 && getPiece(i, j).getFaction().equals("Rebel") ||
                 turn == 1 && getPiece(i, j).getFaction().equals("Royale");
@@ -286,8 +258,8 @@ public class Board {
         return turn;
     }
 
+    // To make sure the player's turn has cycled
     private void cycleTurn() {
-
         for (int i = 0; i < turns.length; i++) {
             if (turn == turns[i]) {
                 if (turns[i] != turns[turns.length - 1]) {
@@ -309,8 +281,8 @@ public class Board {
         summonedPiece = null;
     }
 
-    private Tile getTile(int row, int tile) {
-        return boardRows.get(row).getTile(tile);
+    private Tile getTile(int row, int col) {
+        return tiles[row][col];
     }
 
     // Gets a pieces from a tile
@@ -324,40 +296,60 @@ public class Board {
         return getTile(row, tile).hasPiece();
     }
 
-    // Check if pieces in current tile is moveable
+    // Check if pieces in current tile can move
     public boolean checkMoveInit(int row, int tile) {
         return checkInit(row, tile) && getTile(row, tile).getPiece().isMoveable();
     }
 
-    // Check if pieces in current tile is attackable
+    // Check if pieces in current tile can attack
     public boolean checkAttackInit(int row, int tile) {
         return checkInit(row, tile) && getTile(row, tile).getPiece().isAttackable();
     }
 
     // Check if pieces can move from current tile to target tile
-    public boolean checkMoveTarget(int row, int tile) {
-        return !getTile(row, tile).hasPiece();
+    private boolean checkMoveTarget(int row, int tile) {
+        return !getTile(row, tile).hasPiece() && !isCastle(row);
     }
 
     // Check if pieces can attack target from current tile
-    public boolean checkAttackTarget(Piece piece, int tgRow, int tgTile) {
+    private boolean checkAttackTarget(Piece piece, int tgRow, int tgTile) {
         Tile space = getTile(tgRow, tgTile);
-        String inFaction= piece.getFaction();
-        String outFaction= space.getPiece().getFaction();
+        String inFaction = piece.getFaction();
+        String outFaction = space.getPiece().getFaction();
         return space.hasPiece() && !(inFaction.equals(outFaction));
     }
 
-    private boolean isActionRangeValid(int inRow, int inTile, int tgRow, int tgTile, String type) {
+    //checks if the target tile is valid to be attacked/moved into by the selected peicee
+    private boolean isMovRangeValid(int inRow, int inTile, int tgRow, int tgTile, String type) {
         int rowDiff = abs(inRow - tgRow);
         int tileDiff = abs(inTile - tgTile);
 
         Piece piece = getPiece(inRow, inTile);
-        return piece.isActionValid(rowDiff + tileDiff, type);
+
+        /*for(int i= -rowDiff; i<=rowDiff;i++){
+            if(i!=inRow && (isWall(inRow+i,inTile) || getTile(inRow+i, inTile).hasPiece())){
+                return false;
+            }
+        }
+        for (int i= -tileDiff;i>=tileDiff;i++){
+            if(i!=inTile && (isWall(inRow,inTile+i) || getTile(inRow, inTile+i).hasPiece())){
+                return false;
+            }
+
+
+        }*/
+        return piece.isActionValid(rowDiff, tileDiff, type);
     }
 
-    // Check if pieces hasMoved from current tile to target tile
-    public boolean move(int inRow, int inTile, int tgRow, int tgTile) {
-        if (checkMoveTarget(tgRow, tgTile) && isActionRangeValid(inRow, inTile, tgRow, tgTile, "mov")) {
+    // Check if pieces actionPerformed from current tile to target tile
+    private boolean move(int inRow, int inTile, int tgRow, int tgTile) {
+
+        if (checkMoveTarget(tgRow, tgTile) && isMovRangeValid(inRow, inTile, tgRow, tgTile, "moveSpeed")) {
+
+            // Check if a piece will go across opposite piece no matter what directions, which is forbidden
+            if (checkAcross(inRow, inTile, tgRow, tgTile)) {
+                return false;
+            }
             getTile(tgRow, tgTile).setPiece(getPiece(inRow, inTile));
             getTile(inRow, inTile).removePiece();
             return true;
@@ -365,12 +357,45 @@ public class Board {
         return false;
     }
 
+    boolean checkAcross(int inRow, int inTile, int tgRow, int tgTile) {
+        Tile currTile;
+        if (inTile == tgTile) {
+            Tile initTile = getTile(inRow, inTile);
+            for (int i = 1; i < Math.abs(inRow - tgRow) + 1; i++) {
+                if (tgRow < inRow) {
+                    currTile = getTile(inRow-i, inTile);
+                } else {
+                    currTile = getTile(inRow+i, inTile);
+                }
+                if (currTile.hasPiece()) {
+                    if (!currTile.getPiece().getFaction().equals(initTile.getPiece().getFaction())) {
+                        return true;
+                    }
+                }
+            }
+        } else if (inRow == tgRow) {
+            Tile initTile = getTile(inRow, inTile);
+            for (int j = 1; j < Math.abs(inTile - tgTile) + 1; j++) {
+                if (tgTile < inTile) {
+                    currTile = getTile(inRow, inTile-j);
+                } else {
+                    currTile = getTile(inRow, inTile+j);
+                }
+                if (currTile.hasPiece()) {
+                    if (!currTile.getPiece().getFaction().equals(initTile.getPiece().getFaction())) {
+                        return true;
+                    }
+                }
+            }
+        }
+        return false;
+    }
 
     // Check if pieces hasAttacked target pieces
-    public boolean attack(int inRow, int inTile, int tgRow, int tgTile) {
+    private boolean attack(int inRow, int inTile, int tgRow, int tgTile) {
         if (checkInit(tgRow, tgTile) && checkAttackTarget(getPiece(inRow, inTile), tgRow, tgTile) &&
-                isActionRangeValid(inRow, inTile, tgRow, tgTile, "range")) {
-            getPiece(tgRow, tgTile).attackedBy(getPiece(inRow, inTile).getAttack());
+                isMovRangeValid(inRow, inTile, tgRow, tgTile, "attackRange")) {
+            getPiece(tgRow, tgTile).attackedBy(getPiece(inRow, inTile).getAttackPower());
             return true;
         }
         return false;
@@ -379,9 +404,9 @@ public class Board {
     public void createPiece(String name) {
         try {
             Class pieceCls = Class.forName("model.pieces.type." + name);
-            this.summonedPiece = (Piece) pieceCls.newInstance();
+            this.summonedPiece = (Piece) pieceCls.getDeclaredConstructor().newInstance();
 
-        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException ex) {
+        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException ex) {
             ex.printStackTrace();
         }
 
@@ -389,15 +414,20 @@ public class Board {
 
     private boolean checkSummonValid(Piece piece, int row, int tile) {
         boolean isRowValid;
+        int extraMove= 0;
+
+        if(piece.getType().equals("Obstacle")){
+            extraMove= 3;
+        }
+
         if (piece.getFaction().equals("Royale")) {
-            isRowValid = row < 3;
+            isRowValid = row < 3 + extraMove && row >= 1;
         } else {
-            isRowValid = row > 9;
+            isRowValid = row > 9 - extraMove;
         }
 
         if (checkMoveTarget(row, tile) && isRowValid) {
             getTile(row, tile).setPiece(piece);
-
             return true;
         } else {
             return false;
@@ -405,33 +435,40 @@ public class Board {
     }
 
     public void placeSummonedPiece(JButton tileBtn, int i, int j) {
-        if (checkSummonValid(getSummonedPiece(), i, j) && !hasSummoned) {
+        if (checkSummonValid(getSummonedPiece(), i, j)) {
             tileBtn.setIcon(new ImageIcon(this.getClass().getResource("../" + gfv.getImage())));
             tileBtn.setName(gfv.getImage());
-            gfv.getStatusLabel().setText(STATUS + "A new " + getSummonedPiece().getName() + " has been summoned!");
             removeSummonedPiece();
             gfv.getFrame().setCursor(new Cursor(DEFAULT_CURSOR));
-            setSummoned();
+            setActionPerformed();
+            gfv.getMoveBtn().setVisible(false);
+            gfv.getAttackBtn().setVisible(false);
         } else {
-            gfv.getStatusLabel().setText(GameFrameView.STATUS + "Please place the pieces on a valid tile,\n"
-                    + "The top three rows for Royales,\nThe bottom three rows for Rebels.");
+            gfv.getStatusLabel().setText(STATUS + "Invalid placement, the first two rows for Royales and the bottom three rows for Rebels.");
         }
     }
 
     public void placeMovedPiece(JButton[][] tileBtns, int i, int j) {
+
+        // target tile
         JButton tileBtn = tileBtns[i][j];
+
+
         if (move(getInitTileCoord()[0], getInitTileCoord()[1], i, j)) {
+
             gfv.decolour();
             System.out.println("Image= " + gfv.getImage());
             tileBtn.setIcon(new ImageIcon(this.getClass().getResource("../" + gfv.getImage())));
             tileBtns[getInitTileCoord()[0]][getInitTileCoord()[1]].setIcon(new ImageIcon(
                     this.getClass().getResource("../" + gfv.getGrass())));
             resetMoving();
-            setMoved();
+            setActionPerformed();
+            gfv.getMoveBtn().setVisible(false);
+            gfv.getAttackBtn().setVisible(false);
             tileBtn.setName(gfv.getImage());
-            gfv.getStatusLabel().setText(gfv.STATUS + "Piece has been moved to the target tile.");
+            gfv.getFrame().setCursor(new Cursor(DEFAULT_CURSOR));
         } else {
-            gfv.getStatusLabel().setText(gfv.STATUS + "Tile not valid, press the move button again to cancel.");
+            gfv.getStatusLabel().setText(STATUS + "Tile not valid, press the move button again to cancel.");
         }
     }
 
@@ -439,24 +476,31 @@ public class Board {
         return i % 5 <= 2 && j % 4 == 3;
     }
 
-    public void placeAttackPiece(int i, int j){
-        JButton tileBtns[][] = gfv.getTileBtns();
+    private boolean isCastle(int i) {
+        return i == 0;
+    }
+
+    public void placeAttackPiece(int i, int j) {
+        JButton[][] tileBtns = gfv.getTileBtns();
         if (attack(getInitTileCoord()[0], getInitTileCoord()[1], i, j)) {
-            Piece piece= getPiece(getInitTileCoord()[0], getInitTileCoord()[1]);
+            Piece piece = getPiece(getInitTileCoord()[0], getInitTileCoord()[1]);
             String message;
-            message= String.format("%d damage dealt! Remaining HP: %d", piece.getAttack(),
-            getPiece(i,j).getHp());
-            if(getPiece(i,j).isDead()){
-                message+=String.format(", %s is dead!", getPiece(i,j).getName());
-                getTile(i,j).removePiece();
+            message = String.format("%d damage dealt! Remaining HP: %d", piece.getAttackPower(),
+                    getPiece(i, j).getHp());
+            if (getPiece(i, j).isDead()) {
+                message += String.format(", %s is dead!", getPiece(i, j).getName());
+                getTile(i, j).removePiece();
                 tileBtns[i][j].setIcon(new ImageIcon(this.getClass().getResource("../../images/grass.png")));
             }
             gfv.decolour();
             resetAttacking();
-            setAttcked();
-            gfv.getStatusLabel().setText(gfv.STATUS + message);
+            setActionPerformed();
+            gfv.getMoveBtn().setVisible(false);
+            gfv.getAttackBtn().setVisible(false);
+            gfv.getFrame().setCursor(new Cursor(DEFAULT_CURSOR));
+            gfv.getStatusLabel().setText(STATUS + message);
         } else {
-            gfv.getStatusLabel().setText(GameFrameView.STATUS + "Tile not valid, press the attack button again to cancel.");
+            gfv.getStatusLabel().setText(STATUS + "Tile not valid, press the attack button again to cancel.");
         }
     }
 
